@@ -37,7 +37,7 @@ char *gamedescription;
 
 // Set if homebrew PWAD stuff has been added.
 boolean	modifiedgame;
-
+boolean fliplevels = false;
 
 
 
